# meter

./: CMakeLists.txt  README.md  convert_video.sh  delete_png.sh  line_detect.py  nrs_simulate_0.cnoid  nrs_simulate_15.cnoid  nrs_simulate_30.cnoid  nrs_simulate_45.cnoid  nrs_simulate_60.cnoid  nrs_simulate_75.cnoid  only_plate_30.cnoid  read_max_min.py  runch.sh  size.py  test.py
cropped/: data.csv  pic_1.csv  pic_2.csv  pic_3.csv  pic_4.csv  pic_5.csv  pic_6.csv  pic_7.csv  pic_8.csv  point.py  relative_position.py  rotate.py  size.py  trimming.py
research/: CMakeLists.txt  package.xml
research/model/: field.body  plate.body  plate_with_mass.body  stm_continuous_ramp.body  text.txt
research/project/: nrs_simulate.cnoid
research/src/: CMakeLists.txt  nrs_iwata.cpp  nrs_only_plate.cpp
src/: detect.cpp  line_detect.cpp  tesseract.cpp  video_camera.cpp
